--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,3 +9,36 @@
 .custom-scrollbar-hidden {
   scrollbar-width: none;
 }
+
+.loading {
+  animation: loading 1s ease-out infinite alternate;
+  background: linear-gradient(to right, #5c1e1e, #29295c);
+  background-size: 200% 100%;
+}
+
+.loadingbig {
+  animation: loading 1s ease-out infinite alternate;
+  background: linear-gradient(to left, #5c1e1e, #29295c);
+  background-size: 200% 100%;
+}
+
+@keyframes loading {
+  0% {
+    background-position: 0 0;
+    opacity: 50%;
+  }
+  100% {
+    background-position: 100% 0;
+    opacity: 80%;
+  }
+}
+
+@keyframes bounce {
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+}
